# seleksi-sister-b

./: README.md
dns/: README.md
mandelbrot-of-madness/: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
mandelbrot-of-madness/src/: benchmarker.cpp  gpu-accel.cpp  gui.cpp  multithreaded.cpp  singlethreaded.cpp
se-mettre-requiem/: mult.c
